# progetto-funzionante

./: .env.example  .env_oanda_example  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  OANDA_INTEGRATION_README.md  PRODUCTION_DEPLOYMENT_PLAN.md  PROGETTO_DOCUMENTAZIONE.md  SIGNAL_GENERATION_FIXES.md  SVILUPPO_PROGETTO.md  docker-compose.production.yml  enhanced_signal_engine.py  main.py  market_data_adapter.py  nixpacks.toml  oanda API.txt  oanda_api_integration.py  oanda_signal_engine.py  package.json  railway.json  requirements.txt  requirements_oanda.txt  start.sh  test_oanda_integration.py
.claude/: settings.local.json
MT5_Expert_Advisor/: AICashRevolution_EA.mq5
VPS INSTALLAZIONE/: .env_vps  GUIDA_COMPLETA_VPS.md  README_INSTALLAZIONE.md  README_VPS.md  auto_trader.py  build_vps_installer.bat  check_system.py  database.py  ml_data_storage.py  models.py  mt5_symbols.json  quick_installer.bat  requirements_vps.txt  schemas.py  signal_engine.py  vps_auto_launcher.py  vps_installer.bat  vps_main_server.py
environments/: .env.production  .env.staging
frontend/: .gitignore  QUANT_ADAPTIVE_ARCHITECTURE.md  README.md  SIGNAL_GENERATION_STRATEGY.md  add_missing_columns.py  advanced_signal_analyzer.py  dashboard.html  database.py  debug_database_signals.py  debug_edge_cases.py  debug_full_flow.py  debug_hold_inconsistency.py  debug_http500_fix.py  debug_key_levels.py  debug_pricing.py  debug_signal_generation.py  debug_signal_inconsistency.py  debug_signal_pricing.py  debug_signals_simple.py  email_utils.py  final_verification.py  forgot-password.html  index.html  jwt_auth.py  login.html  main.py  main_backup.py  models.py  nixpacks.toml  oanda_api_client.py  oanda_api_integration.py  oanda_signal_engine.py  profile.html  quantistes_integration.py  railway.json  requirements.txt  reset-password.html  reset_database_complete.py  schemas.py  signals.html  (+17 more)
progetto-funzionante-master/frontend/: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTHENTICATION_GUIDE.md  CACHE_IMPLEMENTATION.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SUMMARY.md  Dockerfile  LINTING_SETUP.md  QUICK_START_GUIDE.md  README.md  REFACTORING_GUIDE.md  SENTRY_DOCUMENTATION.md  SIGNAL_GENERATION_STRATEGY.md  TROUBLESHOOTING.md  add_missing_columns.py  dashboard.html  database.py  docker-compose.prod.yml  docker-performance.conf  final_verification.py  fix_database_schema.py  fix_users_table.py  jwt_auth.py  login.html  main.py  models.py  pyproject.toml  pytest.ini  quantistes_integration.py  register.html  requirements.txt  reset-password.html  reset_database.py  reset_database_complete.py  run-pre-commit.sh  run_tests.py  schemas.py  (+5 more)
progetto-funzionante-master/frontend/.claude/: settings.local.json
progetto-funzionante-master/frontend/app/core/: __init__.py  api_testing.py  api_versioning.py  async_database.py  config.py  error_handling.py  logging_config.py  logging_filters.py  logging_init.py  logging_performance.py  logging_structured.py  openapi_docs.py  openapi_tags.py  openapi_validation.py  swagger_config.py  test_runner.py
progetto-funzionante-master/frontend/app/dependencies/: auth.py  database.py
progetto-funzionante-master/frontend/app/examples/: cache_usage_examples.py
progetto-funzionante-master/frontend/app/middleware/: error_tracking_middleware.py
progetto-funzionante-master/frontend/app/repositories/: __init__.py  base_repository.py  user_repository.py
progetto-funzionante-master/frontend/app/routers/: api_router.py  auth_router.py  enhanced_signals_router.py  logging_router.py  users_router.py
progetto-funzionante-master/frontend/app/schemas/: enhanced_schemas.py
progetto-funzionante-master/frontend/app/services/: async_file_service.py  auth_service.py  cache_service.py  cache_warming.py  logging_service.py  signal_service.py  user_service.py
progetto-funzionante-master/frontend/app/utils/: alerting_system.py  cache_utils.py  sla_monitor.py
progetto-funzionante-master/frontend/config/: README.md  config.development.yaml  config_testing.py  examples.py  settings.py
progetto-funzionante-master/frontend/monitoring/: alert_rules.yml
progetto-funzionante-master/frontend/nginx/: nginx.conf
progetto-funzionante-master/frontend/quant_adaptive_system/regime_detection/: market_regimes.py
progetto-funzionante-master/frontend/quant_adaptive_system/reporting/: metrics_engine.py
progetto-funzionante-master/frontend/quant_adaptive_system/risk_management/: adaptive_sizing.py
progetto-funzionante-master/frontend/scripts/: config_deploy.py  config_manager.py  config_migrate.py  docker-deploy.sh  setup_linting.py
progetto-funzionante-master/frontend/security/: auth_hardening.py  backup_disaster_recovery.py  docker-scan.sh  file_system_security.py  input_validation.py  rate_limiting.py  security_hardening.py
progetto-funzionante-master/frontend/sentiment_analysis/: options_flow.py  options_flow_OLD.py
progetto-funzionante-master/frontend/static/: .gitkeep  error-dashboard.html  testing-dashboard.html
progetto-funzionante-master/frontend/static/js/: translations.js
progetto-funzionante-master/frontend/templates/: oanda-dashboard.html
progetto-funzionante-master/frontend/tests/: __init__.py  test_configuration.py
progetto-funzionante-master/frontend/tests/factories/: signal_factory.py
progetto-funzionante-master/frontend/tests/integration/: README.md  __init__.py  conftest.py  test_api_endpoints_integration.py  test_auth_integration.py  test_caching_async_integration.py  test_cboe_integration.py  test_oanda_connection.py
progetto-funzionante-master/frontend/tests/system/: test_asset_specific_logic.py  test_hold_signal.py  test_improvements.py  test_nas_spx_fix.py  test_quant_system_core.py  test_quick_sl_tp.py
progetto-funzionante-master/frontend/tests/unit/: __init__.py  test_advanced_analyzer.py  test_signal.py  test_user_service.py
(+826 files in other folders)
